[package]
name = "rpg"
version = "0.1.0"
authors = ["Marcel Müller <neikos@neikos.email>"]
description = "A simple Voxel based game, trying to implement different mechanism."

[features]
default = ["client"]

[dependencies.shared]
path = "./shared"

[dependencies.server]
path = "./server"

[dependencies.client]
path = "./client"
optional = true
